WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69432
[Qt][WK2][Mac] QtWebProcess should not show up in the Dock.
https://bugs.webkit.org/show_bug.cgi?id=69432
Summary
[Qt][WK2][Mac] QtWebProcess should not show up in the Dock.
Zeno Albisser
Reported
2011-10-05 08:53:21 PDT
[Qt][WK2][Mac] QtWebProcess should not show up in the Dock.
Attachments
Patch
(1.50 KB, patch)
2011-10-05 08:57 PDT
,
Zeno Albisser
kling
: review-
Details
Formatted Diff
Diff
patch for review. - dropped the toLocal8Bit() thing.
(1.33 KB, patch)
2011-10-05 13:57 PDT
,
Zeno Albisser
kling
: review+
kling
: commit-queue-
Details
Formatted Diff
Diff
patch for review - fixed "#if defined(X)"
(1.70 KB, patch)
2011-10-06 03:56 PDT
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-10-05 08:57:31 PDT
Created
attachment 109807
[details]
Patch
Andreas Kling
Comment 2
2011-10-05 09:09:23 PDT
Comment on
attachment 109807
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109807&action=review
Very nice! :)
> Source/WebKit2/UIProcess/Launcher/qt/ProcessLauncherQt.cpp:85 > + qputenv("QT_MAC_DISABLE_FOREGROUND_APPLICATION_TRANSFORM", QString("1").toLocal8Bit());
We can avoid invoking the ASCII codec by simply passing QByteArray("1") for the second argument.
Zeno Albisser
Comment 3
2011-10-05 13:57:18 PDT
Created
attachment 109856
[details]
patch for review. - dropped the toLocal8Bit() thing.
Andreas Kling
Comment 4
2011-10-05 14:30:28 PDT
Comment on
attachment 109856
[details]
patch for review. - dropped the toLocal8Bit() thing. View in context:
https://bugs.webkit.org/attachment.cgi?id=109856&action=review
r=me
> Source/WebKit2/UIProcess/Launcher/qt/ProcessLauncherQt.cpp:84 > +#if defined Q_OS_MACX
I don't think I've ever seen "#if defined X" in WebKit before, let's stick with "#ifdef X" or "#if defined(X)". Sorry I didn't notice earlier.
Zeno Albisser
Comment 5
2011-10-06 03:56:12 PDT
Created
attachment 109941
[details]
patch for review - fixed "#if defined(X)"
WebKit Review Bot
Comment 6
2011-10-06 04:22:19 PDT
Comment on
attachment 109941
[details]
patch for review - fixed "#if defined(X)" Clearing flags on attachment: 109941 Committed
r96800
: <
http://trac.webkit.org/changeset/96800
>
WebKit Review Bot
Comment 7
2011-10-06 04:22:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug