[Qt][WK2][Mac] QtWebProcess should not show up in the Dock. https://bugs.webkit.org/show_bug.cgi?id=69432

We can set the environment variable QT_MAC_DISABLE_FOREGROUND_APPLICATION_TRANSFORM
in the WebProcess stub to disable the automatic foreground transformation.

Patch by Zeno Albisser <zeno.albisser@nokia.com> on 2011-10-06
Reviewed by Andreas Kling.

* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
(WebKit::QtWebProcess::setupChildProcess):

Canonical link: https://commits.webkit.org/85558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96800 268f45cc-cd09-0410-ab3c-d52691b4dbfc